--- a/webapp/view/app.view.xml
+++ b/webapp/view/app.view.xml
@@ -1,35 +1,17 @@
 <mvc:View
-   controllerName="ui5.walkthrough.controller.App"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc"
-  displayBlock="true">
- <Shell >
-   <App>
-      <pages>
-         <Page title="{i18n>homePageTitle}">
-            <content>
-               <Panel
-                  headerText="{i18n>helloPanelTitle}"
-                  class="sapUiResponsiveMargin"
-							width="auto">
-                  <content>
-                     <Button
-                        text="{i18n>showHelloButtonText}"
-                        press=".onShowHello"
-                        class="sapUiSmallMarginEnd"/>
-                     <Input
-                        value="{/recipient/name}"
-                        description="Hello honey "
-                        valueLiveUpdate="true"
-                        width="60%"/>
-                        <Text
-									text="Hello hii{/recipient/name}"
-									class="sapUiSmallMargin"/>
-                  </content>
-               </Panel>
-            </content>
-         </Page>
-      </pages>
-   </App>
-   </Shell>
+	controllerName="ui5.walkthrough.controller.App"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc"
+	displayBlock="true">
+	<Shell>
+		<App class="myAppDemoWT">
+			<pages>
+				<Page title="{i18n>homePageTitle}">
+					<content>
+						<mvc:XMLView viewName="ui5.walkthrough.view.HelloPanel"/>
+					</content>
+				</Page>
+			</pages>
+		</App>
+	</Shell>
 </mvc:View>
