--- a/webapp/view/HelloDIalog.fragment.xml
+++ b/webapp/view/HelloDIalog.fragment.xml
@@ -3,7 +3,13 @@
    xmlns:core="sap.ui.core">
    <Dialog
       id="helloDialog"
-      title ="Hello {/recipient/name}">
+      title ="Hello hi{/recipient/name}">
+       <content>
+         <core:Icon
+            src="sap-icon://reset"
+            size="8rem"
+            class="sapUiMediumMargin"/>
+      </content>
       <beginButton>
          <Button
             text="{i18n>dialogCloseButtonText}"
