--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -7,8 +7,38 @@ controllerName="ui5.walkthrough.controller.Detail"
 		title="{i18n>detailPageTitle}"
         showNavButton="true"
 		navButtonPress=".onNavBack">
-		<ObjectHeader intro="{invoice>ShipperName}"
+		<ObjectHeader
+        responsive="true"
+            fullScreenOptimized="true"
+            number="{
+                parts: [
+                    'invoice>ExtendedPrice',
+                    'view>/currency'
+                ],
+                type: 'sap.ui.model.type.Currency',
+                formatOptions: {
+                    showMeasure: false
+                }
+            }"
+            numberUnit="{view>/currency}" intro="{invoice>ShipperName}"
         title="{invoice>ProductName}"/>
+          <attributes>
+                <ObjectAttribute
+                    title="{i18n>quantityTitle}"
+                    text="{invoice>Quantity}"/>
+                <ObjectAttribute
+                    title="{i18n>dateTitle}"
+                    text="{
+                        path: 'invoice>ShippedDate',
+                        type: 'sap.ui.model.type.Date',
+                        formatOptions: {
+                            style: 'long',
+                            source: {
+                            pattern: 'yyyy-MM-ddTHH:mm:ss'
+                            }
+                        }
+                    }"/>
+            </attributes>
         <wt:ProductRating 
 			id="rating" 
 			class="sapUiSmallMarginBeginEnd" 
