--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,14 +1,14 @@
 <mvc:View
-controllerName="ui5.walkthrough.controller.Detail"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
+    controllerName="ui5.walkthrough.controller.Detail"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc"
     xmlns:wt="ui5.walkthrough.control">
-	<Page
-		title="{i18n>detailPageTitle}"
+    <Page
+        title="{i18n>detailPageTitle}"
         showNavButton="true"
-		navButtonPress=".onNavBack">
-		<ObjectHeader
-        responsive="true"
+        navButtonPress=".onNavBack">
+        <ObjectHeader
+            responsive="true"
             fullScreenOptimized="true"
             number="{
                 parts: [
@@ -20,9 +20,10 @@ controllerName="ui5.walkthrough.controller.Detail"
                     showMeasure: false
                 }
             }"
-            numberUnit="{view>/currency}" intro="{invoice>ShipperName}"
-        title="{invoice>ProductName}"/>
-          <attributes>
+            numberUnit="{view>/currency}"
+            intro="{invoice>ShipperName}"
+            title="{invoice>ProductName}">
+            <attributes>
                 <ObjectAttribute
                     title="{i18n>quantityTitle}"
                     text="{invoice>Quantity}"/>
@@ -39,9 +40,10 @@ controllerName="ui5.walkthrough.controller.Detail"
                         }
                     }"/>
             </attributes>
-        <wt:ProductRating 
-			id="rating" 
-			class="sapUiSmallMarginBeginEnd" 
-			change=".onRatingChange"/>
-	</Page>
+        </ObjectHeader>
+        <wt:ProductRating
+            id="rating"
+            class="sapUiSmallMarginBeginEnd"
+            change=".onRatingChange"/>
+    </Page>
 </mvc:View>
